--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ main, azure-cse-action ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, azure-cse-action ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -35,8 +35,7 @@ jobs:
         with:
           shell: pwsh
           inlineScript: |
-            dir
-            # TODO: Invoke msbuild and generate cspkg and cscfg
+            msbuild /t:Publish /p:Configuration=Release /m
 
       - name: Run Azure PowerShell script
         uses: azure/powershell@v1
