--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: windows-2019
+    
+    defaults:
+      run:
+        shell: pwsh
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,10 +36,8 @@ jobs:
           enable-AzPSSession: true 
       
       - name: Build cspkg and cscfg file
-        with:
-          shell: pwsh
-          inlineScript: |
-            msbuild /t:Publish /p:Configuration=Release /m
+        run: |
+          msbuild /t:Publish /p:Configuration=Release /m
 
       - name: Run Azure PowerShell script
         uses: azure/powershell@v1
