--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,6 @@ jobs:
             #$cscfgBlob = Set-AzStorageBlobContent -File "./ContosoApp/ContosoApp.cscfg" -Container contosocontainer -Blob "ContosoApp.cscfg" -Context $storageAccount.Context 
             #$cscfgToken = New-AzStorageBlobSASToken -Container "contosocontainer" -Blob $cscfgBlob.Name -Permission rwd -StartTime $tokenStartTime -ExpiryTime $tokenEndTime -Context $storageAccount.Context 
             #$cscfgUrl = $cscfgBlob.ICloudBlob.Uri.AbsoluteUri + $cscfgToken
+            #Test
 
           azPSVersion: 'latest'
