--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ on:
     #branches: [ main ]
     branches: [ azure-cse-action ]
   #pull_request:
-  #  branches: [ main ]
+    #branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  #workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,10 +20,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: windows-2019
-    
-    defaults:
-      run:
-        shell: pwsh
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -37,6 +33,7 @@ jobs:
           enable-AzPSSession: true 
       
       - name: Build cspkg and cscfg file
+        shell: pwsh
         run: |
           msbuild /t:Publish /p:Configuration=Release /m
 
